# Linux-Administration-Project

./: README.md
Bash scripting/: BasicFile2.txt  BasicFilesScript  userdef  userdefPart2.txt
Makefiles & CMake/Project_CMAKE/Application/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  output
Makefiles & CMake/Project_CMAKE/Modules/caesar_cipher/: CMakeLists.txt
Makefiles & CMake/Project_CMAKE/Modules/xor_cipher/: CMakeLists.txt
Makefiles & CMake/Project_MakeFiles/Application/: Makefile  output
Makefiles & CMake/Project_MakeFiles/Modules/caesar_cipher/: caesar_cipher.mk
Makefiles & CMake/Project_MakeFiles/Modules/xor_cipher/: xor_cipher.mk
Process Management/: client.c  server.c
